# weviternia

./: .gitignore  README.md  analyzer.sh  bytes.sh  install-traffic-monitor.sh  install.sh  monitor.sh
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  types.ts
app/src/assets/: style.css
server/: Cargo.toml  package-lock.json  package.json  tsconfig.json  tsconfig.server.json
server/src/: lib.rs  main.rs  server.ts
src/: index.html  style.css  traffic-dashboard.js
